More logos added for Switch template and changed defaults

--- a/settings.json
+++ b/settings.json
@@ -5,6 +5,5 @@
     "output_folder": "C:\\Users\\KyshinoDesktop\\Desktop\\Nueva carpeta\\Output",
     "reddit_client_id": "",
     "reddit_client_secret": "",
-    "switch_color_enabled": true,
-    "switch_color": "#DA1820"
+    "switch_color_enabled": false
 }
